--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-datetime-picker": "^5.0.3",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5"
   }
