--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react-datetime-picker": "^5.0.3",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5"
+  },
+  "devDependencies": {
+    "cypress": "^12.9.0"
   }
 }
